Update: Walkthrough checkpoint 1.4

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                 <p class="label-1">Friday</p>
 
                             </li>
-                            
+
                         </ul>
                     </div>
                 </section>
@@ -237,6 +237,6 @@
     </main>
 
 
-
+<!--  TODO: https://youtu.be/QMwyNnjAils?feature=shared&t=3431 -->
 </body>
 </html>
